objects/SystemObjectYearlyEnergyOutput__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>BaseEnergy__c</fullName>
        <label>BaseEnergy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DegradationFactor__c</fullName>
        <label>DegradationFactor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetEnergy__c</fullName>
        <label>NetEnergy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>System Object Yearly Energy Output</label>
</CustomObject>